# apache-mod-brotli

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  mod_brotli.c  mod_brotli.cc
.travis/: before_install.sh  before_script.sh  install.sh
tests/: test.sh
tests/conf/: mod.conf  test.2.2.conf  test.2.4.conf  test.conf
tests/html/br2/: test04.html
tests/response/: test02.out  test03.out
